--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 body {
     width: 100%;
     height: 100%;
@@ -16,7 +17,20 @@ position: relative;
 }
 
 .logo {
+float: left;
 padding: 16px;
+width: 70%;
+
+}
+.redes-sociais ul li {
+    display: inline-block;
+    float: left;
+    list-style: none; 
+}
+
+.redes-sociais {
+width: 20%;
+float:  right;
 }
 
 .imgfundo{
